# neopixel-nrf52840

./: Cargo.toml  README.md  run.gdb
.cargo/: config.toml
src/: main.rs
