[package]
authors = ["Cristian Eigel <cristian.eigel@icloud.com>"]
edition = "2018"
readme = "README.md"
name = "neopixel-nrf52840"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
nrf52840-hal = {version = "0.16.0", features = ["rt"]}
rtt-target = { version = "0.3", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
smart-leds = "0.3.0"
nb = "0.1.1"
embedded-hal = "0.2.3"
smart-leds-trait = "0.2"
ws2812-blocking-spi = "0.2.0"

# this lets you use `cargo fix`!
[[bin]]
name = "neopixel-nrf52840"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
